<resources>
    <string name="app_name">Retrofit12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="love_calculator">Love Calculator</string>
    <string name="first_name">First name</string>
    <string name="enter_name">Enter name</string>
    <string name="second_name">Second name</string>
    <string name="calculate">Calculate</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="your_score">Your score</string>
    <string name="try_again">Try again</string>
    <string name="it_s_funs_and_many_more">It\'s Funs and Many more</string>
    <string name="have_a_good_time">Have a good time</string>
    <string name="you_should_take_the_time_to_help_those_who_need_you">You should take the time to help those who need you</string>
    <string name="get_started">Get Started</string>
    <string name="start">start</string>
    <string name="history1">History</string>
</resources>