<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ResultFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:id="@+id/iv_second_picture"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="10dp"
        android:src="@drawable/second_picture"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you"
        app:layout_constraintTop_toBottomOf="@id/iv_second_picture"
        android:id="@+id/tv_you"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_you"
        android:id="@+id/iv_heart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_pink_heart"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/me"
        app:layout_constraintTop_toBottomOf="@id/iv_heart"
        android:id="@+id/tv_me"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_score"
        app:layout_constraintTop_toBottomOf="@id/tv_me"
        android:id="@+id/tv_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:textColor="@color/pink"
        />

    <TextView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:text="%"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tv_score"
        android:id="@+id/tv_percentage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:background="@drawable/bg_pink_heart"
        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_percentage"
        android:backgroundTint="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/try_again"
        android:paddingHorizontal="50sp"
        android:textColor="@color/black"
        android:id="@+id/btn_try_again"/>


</androidx.constraintlayout.widget.ConstraintLayout>