<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RequestFragment">

<ImageView
    android:layout_marginHorizontal="20dp"
    android:layout_width="match_parent"
    android:layout_height="170dp"
    app:layout_constraintTop_toTopOf="parent"
    android:id="@+id/iv_picture"
    android:src="@drawable/main_picture"
    android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="28sp"
        android:text="@string/love_calculator"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/iv_picture"
        android:id="@+id/tv_love_calculator"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:id="@+id/tv_first_name"
        app:layout_constraintTop_toBottomOf="@id/tv_love_calculator"
        android:textColor="@color/black"
        android:layout_marginStart="20sp"
        android:textSize="22sp"
        android:layout_marginVertical="20dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_first_name"
        android:id="@+id/layout_first_name"
        android:hint="@string/enter_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_first_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second_name"
        android:id="@+id/tv_second_name"
        app:layout_constraintTop_toBottomOf="@id/layout_first_name"
        android:textColor="@color/black"
        android:layout_marginStart="20sp"
        android:textSize="22sp"
        android:layout_marginVertical="10dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginVertical="10dp"
        app:boxCornerRadiusBottomEnd="30dp"
        app:boxCornerRadiusBottomStart="30dp"
        app:boxCornerRadiusTopEnd="30dp"
        app:boxCornerRadiusTopStart="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/tv_second_name"
        android:id="@+id/layout_second_name"
        android:hint="@string/enter_name">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/et_second_name"/>

    </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@id/layout_second_name"
           android:layout_marginTop="30dp"
           android:backgroundTint="@color/blue"
           app:cornerRadius="20dp"
           android:paddingHorizontal="40sp"
           android:text="@string/calculate"
           android:textAllCaps="false"
           android:id="@+id/btn_request"
           android:textSize="20sp"
           android:paddingVertical="5sp"
           android:textColor="@color/black"/>

</androidx.constraintlayout.widget.ConstraintLayout>