<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".on_board.OnBoardPageFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/on_board2"
        android:id="@+id/iv_on_board_picture"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:id="@+id/tv_big"
        android:text="@string/have_a_good_time"
        android:layout_gravity="center"
       />

    <TextView
        android:id="@+id/tv_small"
        android:layout_marginHorizontal="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/you_should_take_the_time_to_help_those_who_need_you"
        android:layout_gravity="center"
        android:gravity="center"

        android:layout_marginBottom="30dp"
        />

    <com.tbuonomo.viewpagerdotsindicator.SpringDotsIndicator

        android:id="@+id/spring_dots_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        app:dampingRatio="0.5"
        app:dotsColor="@color/blue"
        app:dotsCornerRadius="10dp"
        app:dotsSize="8dp"
        app:dotsSpacing="5dp"
        app:dotsStrokeColor="@color/blue"
        app:dotsStrokeWidth="1dp"
        app:stiffness="300"

        />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/btn_start"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:visibility="gone"/>



</LinearLayout>